--- a/mie_draine_comparisonplot.ipynb
+++ b/mie_draine_comparisonplot.ipynb
@@ -175,31 +175,7 @@
     "plt.loglog()\n",
     "plt.xlabel('Energy [keV]')\n",
     "plt.ylabel('Q')\n",
-    "plt.legend(loc='lower left')\n",
-    "\n",
-    "plt.savefig('myfigure.pdf', format='pdf')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "u'/Users/Emily/Desktop/dustfiles'"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "pwd"
+    "plt.legend(loc='lower left')"
    ]
   },
   {
