--- a/testing.ipynb
+++ b/testing.ipynb
@@ -2,17 +2,27 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 44,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/Users/Emily/Desktop/dust/\n"
+     ]
+    }
+   ],
    "source": [
     "%matplotlib inline\n",
-    "import Wis_MIEV0 as wmie\n",
+    "import Wis_MIEV0noP as wmie\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "\n"
+    "\n",
+    "import os \n",
+    "print os.environ['PYTHONPATH']"
    ]
   },
   {
