Got rid of returns; just have to call functions

--- a/testing.ipynb
+++ b/testing.ipynb
@@ -2,7 +2,22 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "%matplotlib inline\n",
+    "import Wis_ErrPack as wmie\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -16,23 +31,9 @@
     }
    ],
    "source": [
-    "%matplotlib inline\n",
-    "import Wis_MIEV0noP as wmie\n",
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
-    "\n",
     "import os \n",
     "print os.environ['PYTHONPATH']"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
