Fixed print checkpoints in MIEV0

--- a/testing.ipynb
+++ b/testing.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
     "%matplotlib inline\n",
-    "import Wis_ErrPack as wmie\n",
+    "import Wis_MIEV0noP as wmie\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "\n"
