Updated ipython notebooks

--- a/mie_draine_comparisonplot.ipynb
+++ b/mie_draine_comparisonplot.ipynb
@@ -54,7 +54,7 @@
    "outputs": [],
    "source": [
     "GRAIN_RAD = 0.5\n",
-    "tabl = ascii.read(\"draine-graphite0.5\")"
+    "tabl = ascii.read(\"draine_graphite0.5\")"
    ]
   },
   {
@@ -128,7 +128,9 @@
     "plt.xlabel('Wavelength [um]')\n",
     "plt.ylabel('Q')\n",
     "plt.legend(loc='lower left')\n",
-    "plt.figure(figsize=(20,10))"
+    "plt.figure(figsize=(20,10))\n",
+    "\n",
+    "plt.show()"
    ]
   },
   {
@@ -175,7 +177,9 @@
     "plt.loglog()\n",
     "plt.xlabel('Energy [keV]')\n",
     "plt.ylabel('Q')\n",
-    "plt.legend(loc='lower left')"
+    "plt.legend(loc='lower left')\n",
+    "\n",
+    "plt.show()"
    ]
   },
   {
