Updated ipython notebooks

--- a/testing.ipynb
+++ b/testing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -17,23 +17,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/Users/Emily/Desktop/dust/\n"
-     ]
-    }
-   ],
-   "source": [
-    "import os \n",
-    "print os.environ['PYTHONPATH']"
-   ]
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
