--- a/testing.ipynb
+++ b/testing.ipynb
@@ -37,7 +37,130 @@
      ]
     }
    ],
-   "source": []
+   "source": [
+    "#copied from Wis_MVTstOld\n",
+    "\n",
+    "\n",
+    "from Wis_MIEV0noP import *\n",
+    "import numpy as np\n",
+    "\n",
+    "\n",
+    "#PROGRAM TSTMIV\n",
+    "\n",
+    "\"\"\"\n",
+    "c         Test cases for MIEV0 from NCAR Tech Note, with, in addition,\n",
+    "c         calculations of Legendre coefficients\n",
+    "\n",
+    "c     NOTE:  set NoPMOM = True if using NoPMOM version of MIEV0\n",
+    "\n",
+    "\n",
+    "      IMPLICIT  NONE\n",
+    "\n",
+    "c ----------------------------------------------------------------------\n",
+    "c --------  I / O SPECIFICATIONS FOR SUBROUTINE MIEV0  -----------------\n",
+    "c ----------------------------------------------------------------------\n",
+    "      INTEGER  MAXANG, MOMDIM\n",
+    "      PARAMETER  ( MAXANG = 40, MOMDIM = 10 )\n",
+    "      LOGICAL  ANYANG, PERFCT, PRNT(2)\n",
+    "      INTEGER  IPOLZN( 4,2 ), NUMANG, NMOM\n",
+    "      REAL     GQSC, MIMCUT, PMOM( 0:MOMDIM, 4 ), QEXT, QSCA, SPIKE,\n",
+    "     $         XMU(MAXANG), XX(4)\n",
+    "      COMPLEX  CREFIN( 2 ), SFORW, SBACK, S1( MAXANG ), S2( MAXANG ),\n",
+    "     $         TFORW( 2 ), TBACK( 2 )\n",
+    "c ----------------------------------------------------------------------\n",
+    "\n",
+    "c     .. Local Scalars ..\n",
+    "\n",
+    "      LOGICAL   NOPMOM\n",
+    "      INTEGER   I, NIOR, NXX\n",
+    "      REAL      PI\n",
+    "c     ..\n",
+    "c     .. External Subroutines ..\n",
+    "\n",
+    "      EXTERNAL  MIEV0\n",
+    "c     ..\n",
+    "c     .. Intrinsic Functions ..\n",
+    "\n",
+    "      INTRINSIC ASIN, COS\n",
+    "c     ..\n",
+    "      DATA  CREFIN / (1.5,0.0), (1.5,-0.1) /,\n",
+    "     $      XX / 10., 100., 1000., 5000. /,\n",
+    "     $      IPOLZN / 13, 24, 1234, 0, -13, -24, -1234, 0 /,\n",
+    "     $      PRNT / 2*.TRUE. /,\n",
+    "     $      PERFCT /.FALSE./,\n",
+    "     $      MIMCUT / 1.E-6 /,\n",
+    "     $      ANYANG /.TRUE./,\n",
+    "     $      NUMANG / 19 /\n",
+    "\"\"\"\n",
+    "\n",
+    "MAXANG = 40\n",
+    "MOMDIM = 10\n",
+    "XMU = []\n",
+    "for i in range(MAXANG):\n",
+    "    XMU.append(0)\n",
+    "    \n",
+    "S1 = []\n",
+    "for i in range(MAXANG):\n",
+    "    S1.append(0)\n",
+    "\n",
+    "S2 = []\n",
+    "for i in range(MAXANG):\n",
+    "    S2.append(0)\n",
+    "    \n",
+    "TFORW = [0,0]\n",
+    "TBACK = [0,0]\n",
+    "\n",
+    "CREFIN = [ 1.5 + 0.0j, 1.5 - 0.1j ]\n",
+    "XX = [ 10., 100., 1000., 5000. ]\n",
+    "IPOLZN = np.zeros((4,2))\n",
+    "IPOLZN[0,0] = 13\n",
+    "IPOLZN[1,0] = 24\n",
+    "IPOLZN[2,0] = 1234\n",
+    "IPOLZN[3,0] = 0\n",
+    "IPOLZN[0,1] = -13\n",
+    "IPOLZN[1,1] = -24\n",
+    "IPOLZN[2,1] = -1234\n",
+    "IPOLZN[3,1] = 0\n",
+    "PRNT = [ True, True ]\n",
+    "PERFCT = False\n",
+    "MIMCUT = 1.E-6\n",
+    "ANYANG = True\n",
+    "NUMANG = 19\n",
+    "QEXT = None\n",
+    "QSCA = None\n",
+    "GQSC = None\n",
+    "PMOM = [1,2,3,4,5,6,7,8,9,10]\n",
+    "SFORW = None\n",
+    "SBACK = None\n",
+    "SPIKE = None\n",
+    "\n",
+    "NOPMOM = True\n",
+    "PI     = 2.*np.arcsin( 1.0 )\n",
+    "\n",
+    "if NUMANG > MAXANG:\n",
+    "    print \"numang\"\n",
+    "    import sys\n",
+    "    sys.exit()\n",
+    "\n",
+    "for I in range( 0, NUMANG ):\n",
+    "    XMU[ I ] = np.cos( (I)*np.pi / ( NUMANG - 1 ) )\n",
+    "\n",
+    "XMU[ NUMANG - 1 ] = -1.0\n",
+    "\n",
+    "\n",
+    "for NIOR in range( 0, 2 ):\n",
+    "\n",
+    "    for NXX in range( 0, 4 ):\n",
+    "\n",
+    "        NMOM = 10\n",
+    "        if NOPMOM or NXX == 3:\n",
+    "            NMOM = 0\n",
+    "\n",
+    "        print MIEV0( XX[ NXX ], CREFIN[ NIOR ], PERFCT, MIMCUT, ANYANG, NUMANG,\n",
+    "                    XMU, NMOM, IPOLZN[ NXX, NIOR ], MOMDIM, PRNT, QEXT, QSCA,\n",
+    "                    GQSC, PMOM, SFORW, SBACK, S1, S2, TFORW, TBACK, SPIKE )\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "code",
